--- a/app/src/main/res/layout-land/flip_card.xml
+++ b/app/src/main/res/layout-land/flip_card.xml
@@ -2,14 +2,14 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="151dp"
+    android:layout_height="wrap_content"
 
     android:id="@+id/rl">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl4"
         android:layout_width="match_parent"
-        android:layout_height="151dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/shape_rectangle5"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:text="赠送翻牌机会 1 次"
             android:textColor="#333333"
-            android:textSize="14sp"
+            android:textSize="24sp"
             android:gravity="left"
             android:layout_marginTop="16dp"
             android:layout_marginLeft="13dp"
@@ -36,7 +36,7 @@
             android:text="累计剩余3次"
             android:paddingLeft="13dp"
             android:textColor="#999999"
-            android:textSize="13sp"
+            android:textSize="23sp"
             app:layout_constraintLeft_toRightOf="@id/cl4_tv7"
             app:layout_constraintBottom_toBottomOf="@id/cl4_tv7"
             app:layout_constraintTop_toTopOf="@id/cl4_tv7"
@@ -44,8 +44,8 @@
 
         <ImageView
             android:id="@+id/cl3_im2"
-            android:layout_width="14dp"
-            android:layout_height="14dp"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
             android:layout_marginRight="3dp"
             app:layout_constraintRight_toLeftOf="@id/cl4_tv9"
             app:layout_constraintBottom_toBottomOf="@id/cl4_tv7"
@@ -62,12 +62,12 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="@id/cl4_tv7"
             app:layout_constraintTop_toTopOf="@id/cl4_tv7"
-            android:textSize="12sp" />
+            android:textSize="22sp" />
 
         <ImageView
             android:id="@+id/card1_copy"
-            android:layout_width="97dp"
-            android:layout_height="98dp"
+            android:layout_width="194dp"
+            android:layout_height="196dp"
             android:src="@drawable/card1"
             android:layout_marginTop="8dp"
             app:layout_constraintHorizontal_chainStyle="spread"
@@ -78,20 +78,22 @@
 
         <ImageView
             android:id="@+id/card1"
-            android:layout_width="97dp"
-            android:layout_height="98dp"
+            android:layout_width="194dp"
+            android:layout_height="196dp"
             android:layout_marginTop="8dp"
             android:src="@drawable/card1"
+            android:layout_marginBottom="15dp"
             android:transitionName="transition_image"
             app:layout_constraintHorizontal_chainStyle="spread"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@id/card2"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cl4_tv7" />
 
         <ImageView
             android:id="@+id/card2"
-            android:layout_width="97dp"
-            android:layout_height="98dp"
+            android:layout_width="194dp"
+            android:layout_height="196dp"
             android:src="@drawable/card2"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@id/cl4_tv7"
@@ -100,8 +102,8 @@
             />
         <ImageView
             android:id="@+id/card3"
-            android:layout_width="97dp"
-            android:layout_height="98dp"
+            android:layout_width="194dp"
+            android:layout_height="196dp"
             android:src="@drawable/card3"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@id/cl4_tv7"
