--- a/app/src/main/res/layout/first.xml
+++ b/app/src/main/res/layout/first.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_width="85dp"
     android:background="@drawable/shape_rectangle6"
     android:layout_marginRight="10dp"
-    android:layout_height="90dp">
+    android:layout_height="90dp"
+    tools:ignore="MissingDefaultResource">
 
 
 
@@ -14,7 +16,7 @@
         android:id="@+id/iv_image"
         android:layout_width="21dp"
         android:layout_height="24dp"
-        app:layout_constraintVertical_chainStyle="spread"
+        app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
