--- a/app/src/main/res/drawable/shape_rectangle4.xml
+++ b/app/src/main/res/drawable/shape_rectangle4.xml
@@ -4,6 +4,7 @@
         <shape android:shape="rectangle">
             <corners android:radius="11dp" />
             <solid android:color="#ff514f" />
+            <!--<solid android:color="#ead1dc" />-->
         </shape>
     </item>
 </selector>
