--- a/app/src/main/res/layout-land/flip_card.xml
+++ b/app/src/main/res/layout-land/flip_card.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
 
-    android:id="@+id/rl">
+    android:id="@+id/rl"
+    tools:ignore="MissingDefaultResource">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl4"
@@ -66,8 +68,8 @@
 
         <ImageView
             android:id="@+id/card1_copy"
-            android:layout_width="194dp"
-            android:layout_height="196dp"
+            android:layout_width="230dp"
+            android:layout_height="230dp"
             android:src="@drawable/card1"
             android:layout_marginTop="8dp"
             app:layout_constraintHorizontal_chainStyle="spread"
@@ -78,8 +80,8 @@
 
         <ImageView
             android:id="@+id/card1"
-            android:layout_width="194dp"
-            android:layout_height="196dp"
+            android:layout_width="230dp"
+            android:layout_height="230dp"
             android:layout_marginTop="8dp"
             android:src="@drawable/card1"
             android:layout_marginBottom="15dp"
@@ -92,8 +94,8 @@
 
         <ImageView
             android:id="@+id/card2"
-            android:layout_width="194dp"
-            android:layout_height="196dp"
+            android:layout_width="230dp"
+            android:layout_height="230dp"
             android:src="@drawable/card2"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@id/cl4_tv7"
@@ -102,8 +104,8 @@
             />
         <ImageView
             android:id="@+id/card3"
-            android:layout_width="194dp"
-            android:layout_height="196dp"
+            android:layout_width="230dp"
+            android:layout_height="230dp"
             android:src="@drawable/card3"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@id/cl4_tv7"
