--- a/app/src/main/res/layout/activity_flip_page.xml
+++ b/app/src/main/res/layout/activity_flip_page.xml
@@ -9,17 +9,17 @@
         android:id="@+id/beam"
         android:layout_width="900dp"
         android:layout_height="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-         />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/card"
         android:layout_width="97dp"
         android:layout_height="98dp"
-        android:src="@drawable/winner"
         android:transitionName="transition_image"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
