--- a/app/src/main/res/layout/widget_scroll_text_layout.xml
+++ b/app/src/main/res/layout/widget_scroll_text_layout.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
-    <com.example.myapplication.recharge.CustomTextView
+    <com.example.myapplication.recharge.MarqueeTextView
         android:id="@+id/tv_banner1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -17,7 +17,7 @@
         android:marqueeRepeatLimit="-1"
         android:textSize="12sp" />
 
-    <com.example.myapplication.recharge.CustomTextView
+    <com.example.myapplication.recharge.MarqueeTextView
         android:id="@+id/tv_banner2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
