--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -10,9 +10,13 @@
 
     <declare-styleable name="TitleBar">
         <attr name="title" format="string" />
+        <attr name="right_title" format="string" />
         <attr name="back_src" format="reference" />
+        <attr name="right_src" format="reference" />
         <attr name="imageWidth3" format="dimension"/>
+        <attr name="right_imageWidth3" format="dimension"/>
         <attr name="imageHeight3" format="dimension"/>
+        <attr name="right_imageHeight3" format="dimension"/>
     </declare-styleable>
 
     <declare-styleable name="ImageTextCustomView">
