--- a/app/src/main/res/drawable/shape_rectangle21.xml
+++ b/app/src/main/res/drawable/shape_rectangle21.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:width="160dp" android:height="36dp">
+    <item>
         <shape android:shape="rectangle">
-            <corners android:radius="5dp" />
-            <solid android:color="#dcdcdc" />
+            <corners android:radius="8dp" />
+            <solid android:color="#ffffff" />
         </shape>
     </item>
 </selector>
