--- a/app/src/main/res/layout/scratch_card.xml
+++ b/app/src/main/res/layout/scratch_card.xml
@@ -78,14 +78,23 @@
 
         <ImageView
             android:id="@+id/image_hand"
-            android:layout_width="150dp"
-            android:layout_height="53dp"
-            android:layout_marginTop="45dp"
-            android:layout_marginLeft="20dp"
-            android:src="@drawable/button_hand"
+            android:layout_width="112dp"
+            android:layout_height="33dp"
+            android:layout_marginTop="50dp"
+            android:src="@drawable/button2"
             app:layout_constraintTop_toBottomOf="@id/cl4_tv7"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"/>
 
+        <ImageView
+            android:id="@+id/image_hand2"
+            android:layout_width="112dp"
+            android:layout_height="33dp"
+            android:layout_marginTop="60dp"
+            android:layout_marginLeft="100dp"
+            android:src="@drawable/hand"
+            app:layout_constraintTop_toBottomOf="@id/cl4_tv7"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
