--- a/app/src/main/res/layout/view_titlebar.xml
+++ b/app/src/main/res/layout/view_titlebar.xml
@@ -28,6 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:paddingRight="13dp"
             android:textSize="16sp"
             android:text="查询余额"
             android:layout_alignParentRight="true"
