--- a/app/src/main/res/layout-land/fourth.xml
+++ b/app/src/main/res/layout-land/fourth.xml
@@ -4,7 +4,7 @@
     android:layout_marginLeft="6dp"
     android:layout_marginBottom="10dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/shape_rectangle19"
+    android:background="@drawable/shape_rectangle24"
     android:layout_height="wrap_content">
 
 
@@ -42,9 +42,8 @@
                 android:textSize="11sp"
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp"
-                android:layout_marginLeft="11dp"
                 app:layout_constraintTop_toBottomOf="@id/name"
-                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintLeft_toLeftOf="@id/name"
                 />
 
             <TextView
@@ -74,7 +73,7 @@
                 android:textSize="12sp"
                 app:layout_constraintBaseline_toBaselineOf="@id/name5"
                 app:layout_constraintTop_toBottomOf="@id/name2"
-                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintLeft_toLeftOf="@id/name"
                 />
 
             <TextView
