--- a/app/src/main/res/layout-land/scratch_card.xml
+++ b/app/src/main/res/layout-land/scratch_card.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="151dp"
+    android:layout_height="wrap_content"
 
-    android:id="@+id/rl"
-    tools:ignore="MissingDefaultResource">
+    android:id="@+id/rl">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl4"
@@ -21,7 +19,7 @@
             android:id="@+id/cl4_tv7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="赠送翻牌机会 1 次"
+            android:text="赠送刮奖机会 1 次"
             android:textColor="#333333"
             android:textSize="14sp"
             android:gravity="left"
@@ -38,7 +36,7 @@
             android:text="累计剩余3次"
             android:paddingLeft="13dp"
             android:textColor="#999999"
-            android:textSize="13sp"
+            android:textSize="12sp"
             app:layout_constraintLeft_toRightOf="@id/cl4_tv7"
             app:layout_constraintBottom_toBottomOf="@id/cl4_tv7"
             app:layout_constraintTop_toTopOf="@id/cl4_tv7"
@@ -58,7 +56,7 @@
             android:id="@+id/cl4_tv9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="换一换"
+            android:text="再刮一次"
             android:textColor="#999999"
             android:layout_marginRight="15dp"
             app:layout_constraintRight_toRightOf="parent"
@@ -66,61 +64,40 @@
             app:layout_constraintTop_toTopOf="@id/cl4_tv7"
             android:textSize="12sp" />
 
-        <ImageView
-            android:id="@+id/card1_copy"
-            android:layout_width="97dp"
-            android:layout_height="98dp"
-            android:src="@drawable/card1"
-            android:layout_marginTop="8dp"
-            app:layout_constraintHorizontal_chainStyle="spread"
-            app:layout_constraintTop_toBottomOf="@id/cl4_tv7"
-            app:layout_constraintRight_toLeftOf="@id/card2"
-            app:layout_constraintLeft_toLeftOf="parent"
-            />
-
-        <ImageView
-            android:id="@+id/card1"
-            android:layout_width="97dp"
-            android:layout_height="98dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="10dp"
-            android:src="@drawable/card1"
-            android:transitionName="transition_image"
-            app:layout_constraintHorizontal_chainStyle="spread"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/card2"
-            app:layout_constraintTop_toBottomOf="@id/cl4_tv7" />
-
-        <ImageView
-            android:id="@+id/card2"
-            android:layout_width="97dp"
-            android:layout_height="98dp"
-            android:src="@drawable/card2"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/cl4_tv7"
-            app:layout_constraintLeft_toRightOf="@id/card1"
-            app:layout_constraintRight_toLeftOf="@id/card3"
-            />
-        <ImageView
-            android:id="@+id/card3"
-            android:layout_width="97dp"
-            android:layout_height="98dp"
-            android:src="@drawable/card3"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/cl4_tv7"
-            app:layout_constraintLeft_toRightOf="@id/card2"
-            app:layout_constraintRight_toRightOf="parent"
-            />
-
-        <!--<androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view3"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
+        <LinearLayout
+            android:id="@+id/container"
+            android:layout_width="0dp"
+            android:layout_height="207dp"
+            android:layout_marginTop="10dp"
             android:layout_marginLeft="12dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginRight="12dp"
+            android:layout_marginBottom="10dp"
+            app:layout_constraintWidth_default="spread"
+            app:layout_constraintTop_toBottomOf="@id/cl4_tv7"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:orientation="horizontal" />
+
+        <ImageView
+            android:id="@+id/image_hand"
+            android:layout_width="264dp"
+            android:layout_height="86dp"
+            android:layout_marginTop="83dp"
+            android:src="@drawable/button2"
             app:layout_constraintTop_toBottomOf="@id/cl4_tv7"
             app:layout_constraintLeft_toLeftOf="parent"
-            />-->
+            app:layout_constraintRight_toRightOf="parent"/>
 
+        <ImageView
+            android:id="@+id/image_hand2"
+            android:layout_width="124dp"
+            android:layout_height="86dp"
+            android:layout_marginTop="118dp"
+            android:layout_marginLeft="258dp"
+            android:src="@drawable/hand"
+            app:layout_constraintTop_toBottomOf="@id/cl4_tv7"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
