--- a/app/src/main/res/layout/components_fragment.xml
+++ b/app/src/main/res/layout/components_fragment.xml
@@ -36,13 +36,22 @@
         app:layout_constraintLeft_toLeftOf="parent"
         />
 
-    <com.example.myapplication.recharge.ScratchCardView
-        android:id="@+id/cl6"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
         app:layout_constraintTop_toBottomOf="@id/recycler_view"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:background="@drawable/shape_rectangle5"/>
+        android:paddingRight="10dp"
+        android:paddingLeft="10dp"
+        app:layout_constraintLeft_toLeftOf="parent">
 
+        <com.example.myapplication.recharge.ScratchCardView
+            android:id="@+id/cl6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:background="@drawable/shape_rectangle5"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
