--- a/app/src/main/res/layout/first.xml
+++ b/app/src/main/res/layout/first.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
-    android:layout_width="209dp"
+    android:layout_width="85dp"
     android:background="@drawable/shape_rectangle6"
     android:layout_marginRight="10dp"
-    android:layout_height="190dp"
+    android:layout_height="90dp"
     tools:ignore="MissingDefaultResource">
 
 
@@ -14,10 +14,10 @@
 
     <ImageView
         android:id="@+id/iv_image"
-        android:layout_width="23dp"
-        android:layout_height="48dp"
-        app:layout_constraintVertical_weight="2"
-        app:layout_constraintVertical_chainStyle="packed"
+        android:layout_width="21dp"
+        android:layout_height="24dp"
+        android:layout_marginTop="5dp"
+        app:layout_constraintVertical_chainStyle="spread"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -31,8 +31,7 @@
         android:text="充流量"
         android:layout_marginTop="8dp"
         android:textColor="#333333"
-        android:textSize="23sp"
-        app:layout_constraintVertical_weight="1"
+        android:textSize="13sp"
         app:layout_constraintTop_toBottomOf="@id/iv_image"
         app:layout_constraintBottom_toTopOf="@id/name2"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -46,8 +45,8 @@
         android:text="流量告急速订购"
         android:layout_marginTop="5dp"
         android:textColor="#999999"
-        android:textSize="20sp"
-        app:layout_constraintVertical_weight="1"
+        android:textSize="10sp"
+        android:layout_marginBottom="5dp"
         app:layout_constraintTop_toBottomOf="@id/name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
