--- a/app/src/main/res/layout/recharge_page.xml
+++ b/app/src/main/res/layout/recharge_page.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="360dp"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#f4f4f4">
@@ -650,8 +650,8 @@
                 android:id="@+id/recycler_view4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="3dp"
                 android:layout_marginTop="15dp"
+                android:layout_marginLeft="10dp"
                 app:layout_constraintTop_toBottomOf="@id/cl6"
                 app:layout_constraintLeft_toLeftOf="parent"
                 />
