--- a/app/src/main/res/layout/scratch_card.xml
+++ b/app/src/main/res/layout/scratch_card.xml
@@ -64,8 +64,22 @@
             app:layout_constraintTop_toTopOf="@id/cl4_tv7"
             android:textSize="12sp" />
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/container"
+            android:layout_width="310dp"
+            android:layout_height="107dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            app:layout_constraintTop_toBottomOf="@id/cl4_tv7"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:orientation="horizontal" >
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="310dp"
             android:layout_height="107dp"
             android:layout_marginTop="10dp"
@@ -74,27 +88,34 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:orientation="horizontal" />
+            android:orientation="horizontal" >
 
-        <ImageView
-            android:id="@+id/image_hand"
-            android:layout_width="132dp"
-            android:layout_height="43dp"
-            android:layout_marginTop="43dp"
-            android:src="@drawable/button2"
-            app:layout_constraintTop_toBottomOf="@id/cl4_tv7"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"/>
+            <ImageView
+                android:id="@+id/image_hand"
+                android:layout_width="132dp"
+                android:layout_height="43dp"
+                android:src="@drawable/button2"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"/>
 
-        <ImageView
-            android:id="@+id/image_hand2"
-            android:layout_width="112dp"
-            android:layout_height="43dp"
-            android:layout_marginTop="58dp"
-            android:layout_marginLeft="128dp"
-            android:src="@drawable/hand"
-            app:layout_constraintTop_toBottomOf="@id/cl4_tv7"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"/>
+            <ImageView
+                android:id="@+id/image_hand2"
+                android:layout_width="43dp"
+                android:layout_height="43dp"
+                android:src="@drawable/hand"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginTop="25dp"
+                android:layout_marginLeft="120dp"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
