--- a/app/src/main/res/layout/fourth.xml
+++ b/app/src/main/res/layout/fourth.xml
@@ -4,7 +4,6 @@
     android:layout_marginBottom="10dp"
     android:layout_marginRight="10dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/shape_rectangle19"
     android:layout_height="wrap_content">
 
 
@@ -13,7 +12,7 @@
         android:layout_width="158dp"
         android:layout_height="158dp"
         android:src="@drawable/falls1"
-        android:scaleType="fitXY"
+        android:scaleType="centerCrop"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
